update to new group page

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,18 +1,14 @@
-- name: Example student name
-  photo: rock.jpg
-  info: Postdoc, started Oct 2040
-  email: exampleemail@gmail.com
-  website: https://website.com
-  number_educ: 2
-  education1: Postdoc with <a href="w">XYZ</a>, Harvard University
-  education2: Ph.D. with <a href="w">XYZ</a>, X University
+- name: Anand Radhakrishnan
+  photo: anand.jpg
+  info: PhD student
+  email: anandr3@illinois.edu
+  linkedin: https://www.linkedin.com/in/anandr97
+  # website: https://website.com
+  # github: https://github.com/sbryngelson
+  # researchgate: https://www.researchgate.net/profile/Spencer_Bryngelson
+  # scholar: https://scholar.google.com/citations?user=dM-nHdMAAAAJ&hl=en
+  # cv: cv/cv.pdf
 
-
-- name: "This could be you !"
-  photo: rock.jpg
-  info: See <a href="www">openings</a> for more info
-  number_educ: 0
-  education1:
-  education2:
-  education3:
-  education4:
+- name: "This could be you!"
+  photo: couldbeyou2.png
+  info: See <a href="https://bryngelson-research.com/vacancies/" target="_blank">vacancies</a> for more information
