--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Site settings
-title: Dr. Spencer Bryngelson
+title: Bryngelson Research Group
 email: spencer@caltech.edu
-description: Academic webpage of Dr. Spencer H. Bryngelson
+description: Webpage of the Bryngelson Research Group
 baseurl: ""
 url: ""
-
 
 # Google analytics ID: Remove or use your own!
 google_analytics: UA-167467135-1
@@ -12,30 +11,30 @@ google_analytics_4: G-02KDGRRB2T
 google_tag_manager: GTM-TZ9Z7HZ
 
 # Footer info
-affiliation: >
-    Dr. Spencer Bryngelson<br/>
-    Senior Postdoctoral Scholar<br/>
-    <a href="http://www.eas.caltech.edu/" target="_blank">Engineering and Applied Science</a><br/>
-    California Institute of Technology
+about: >
+    Prof. Spencer H. Bryngelson<br/>
+    College of Computing, <a href="https://cse.gatech.edu/" target="_blank">CSE</a><br/>
+    Georgia Institute of Technology
 
-location: >
-  <a href="http://www.mce.caltech.edu/about/gates_thomas" target="_blank">Gates-Thomas Laboratory</a><br/>
-  California Institute of Technology <br/>
-  1200 E California Blvd<br/>
-  Pasadena, CA 91125, MC104-44
+coordinates: >
+  <a href="https://codatechsquare.com/" target="_blank">CODA</a><br/>
+  756 W Peachtree St<br/>
+  Atlanta, GA 30332
 
-contact: >
+information: >
     <a href="mailto:spencer@caltech.edu" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Spencer via email</a> <br/>
-    <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
+    <a href="/aboutwebsite.html"><i class="fa fa-github fa-1x"></i> Use my site as a template!</a> <br/>
+    <a href="/vacancies.html"><i class="fa fa-users fa-1x"></i> Explore openings</a>
+
 
 # Pages shown in navbar
 nav_pages:
-  - name: about
+  - name: team
   - name: publications
-  - name: talks
   - name: research
   - name: software
-# - name: team
+
+# - name: about
 # - name: teaching
 
 include:
