--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,23 +1,17 @@
-- name: Dr. Spencer H. Bryngelson
+- name: Spencer Bryngelson
   photo: spencer_headshot.jpg
-  info: Senior Postdoctoral Scholar, Caltech 
+  info: <i>Assistant Professor</i><br/> College of Computing <br/>Georgia Tech 
   email: spencer@caltech.edu
   github: https://github.com/sbryngelson
   researchgate: https://www.researchgate.net/profile/Spencer_Bryngelson
   scholar: https://scholar.google.com/citations?user=dM-nHdMAAAAJ&hl=en
   cv: cv/cv.pdf
-  number_educ: 6
-  education1: (2018- ) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
-  education2: (2019) Visiting Researcher, MIT (with <a href="http://sandlab.mit.edu" target="_blank">Themis Sapsis</a>)
-  education3: (2017-8) Postdoctor Researcher <br> <a href="https://xpacc.illinois.edu" target="_blank">XPACC</a> (with <a href="https://sites.usc.edu/hptcl/" target="_blank">Carlos Pantano</a>, <a href="http://acoustics.ae.illinois.edu/" target="_blank">Dan Bodony</a>, <a href="http://jbfreund.mechse.illinois.edu/" target="_blank">Jon Freund</a>)
-  education4: (2017) Ph.D. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign (with <a href="https://aerospace.illinois.edu/directory/profile/jbfreund" target="_blank">Jon Freund</a>)
-  education5: (2015) M.S. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign
+  education1: (2021- ) Assistant Professor of <a href="https://cse.gatech.edu/" target="_blank">CSE</a>, Georgia Tech
+  education2: (2018-21) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
+  education3: (2019) Visiting Researcher, MIT (with <a href="http://sandlab.mit.edu" target="_blank">Themis Sapsis</a>)
+  education4: (2017-8) Postdoc, <a href="https://xpacc.illinois.edu/" target="_blank">XPACC</a>
+  education5: (2013-7) M.S + Ph.D., UIUC (with <a href="https://aerospace.illinois.edu/directory/profile/jbfreund" target="_blank">Jon Freund</a>)
+  education6: (2015) M.S. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign
     <br>(with certificate in <a href="https://cse.illinois.edu/" target="_blank">Computational Science & Engineering</a>)
-  education6: (2013) B.S. Mechanical Engineering, B.S. Mathematics<br>
+  education7: (2013) B.S. Mechanical Engineering, B.S. Mathematics<br>
     University of Michigan-Dearborn
-  education1short: (2018- ) Senior Postdoc, Caltech 
-  education2short: (2019) Visiting Researcher, MIT 
-  education3short: (2017-8) Postdoc, XPACC 
-  education4short: (2017) Ph.D. TAM, UIUC 
-  education5short: (2015) M.S. TAM/CSE, UIUC
-  education6short: (2013) B.S.+B.S, Michigan
