update to vector image for pi

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -10,5 +10,5 @@
   # cv: cv/cv.pdf
 
 - name: "This could be you!"
-  photo: couldbeyou2.png
+  photo: pi.svg
   info: See <a href="https://bryngelson-research.com/vacancies/" target="_blank">vacancies</a> for more information
