--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,5 @@
+- date: 20 April, 2020
+  headline: "Jean's data assimilation paper was accepted to JMPS, <a href='https://doi.org/10.1016/j.jmps.2021.104455' target='_blank'>see it here!<a>"
 - date: 5 November, 2020
   headline: "Paper on QBMMlib <a href='https://www.sciencedirect.com/science/article/pii/S2352711020303289' target='_blank'>was published by SoftwareX<a> after revision. It's open access, check it out!"
 
