--- a/_data/pi.yml
+++ b/_data/pi.yml
@@ -1,17 +1,10 @@
-- name: Spencer Bryngelson
-  photo: spencer_headshot.jpg
-  info: <i>Assistant Professor</i><br/> College of Computing <br/>Georgia Tech 
-  email: spencer@caltech.edu
-  github: https://github.com/sbryngelson
-  researchgate: https://www.researchgate.net/profile/Spencer_Bryngelson
-  scholar: https://scholar.google.com/citations?user=dM-nHdMAAAAJ&hl=en
+- name: Nitzan Farhi      
+  photo: profile_pic.jpg
+  info: <i>Phd Student</i><br/>Tel Aviv University<br/>
+  email: nitznafarhi@mail.tau.ac.il
+  github: https://github.com/nitzanfarhi
+  scholar: https://scholar.google.com/citations?user=yA8PEnMAAAAJ&hl=en&oi=sra
   cv: cv/cv.pdf
-  education1: (2021- ) Assistant Professor of <a href="https://cse.gatech.edu/" target="_blank">CSE</a>, Georgia Tech
-  education2: (2018-21) Senior Postdoc, Caltech (with <a href="https://colonius.caltech.edu" target="_blank">Tim Colonius</a>)
-  education3: (2019) Visiting Researcher, MIT (with <a href="http://sandlab.mit.edu" target="_blank">Themis Sapsis</a>)
-  education4: (2017-8) Postdoc, <a href="https://xpacc.illinois.edu/" target="_blank">XPACC</a>
-  education5: (2013-7) M.S + Ph.D., UIUC (with <a href="https://aerospace.illinois.edu/directory/profile/jbfreund" target="_blank">Jon Freund</a>)
-  education6: (2015) M.S. Theoretical and Applied Mechanics<br> University of Illinois at Urbana-Champaign
-    <br>(with certificate in <a href="https://cse.illinois.edu/" target="_blank">Computational Science & Engineering</a>)
-  education7: (2013) B.S. Mechanical Engineering, B.S. Mathematics<br>
-    University of Michigan-Dearborn
+  education1: (2019-) Phd Student<br> Tel Aviv university
+  education2: (2018) MSc Software and Information Systems Engineering<br> Ben Gurion University
+  education3: (2018) BSc Software Engineering<br> Ben Gurion University
